# ork

./: .clang-format  .gitignore  LICENSE.txt  ReadMe.md  appveyor.yml  lib_ork.sln  lib_ork.vcxproj  lib_ork.vcxproj.filters
ork/: color.hpp  command_line.hpp  database.hpp  distribution.hpp  enum.hpp  file_utils.hpp  filter.hpp  fwd.hpp  geometry.hpp  glm.hpp  html.hpp  import_export.hpp  memory.hpp  orientation.hpp  ork.hpp  parse.hpp  string_utils.hpp  tagger.hpp  text_io.hpp  text_serializable.hpp  type_traits.hpp  xml.hpp
ork/config/: config.hpp
ork/core/: boost_include.inl  config_internal.hpp  exception.hpp  file_system.hpp  includes.hpp  log.hpp  stl_include.inl  text.hpp  tools.hpp  tools_generated.hpp
ork/detail/: config.hpp  config_internal.hpp  exception.hpp  file_system.hpp  log.hpp  text.hpp  tools.hpp
ork/private/: text_includes.hpp
ork/test/: catch_include.hpp
src/: color.cpp  command_line.cpp  common.cpp  distribution.cpp  geometry.cpp  glm.cpp  html.cpp  import_export.cpp  log.cpp  orientation.cpp  parse.cpp  string_utils.cpp  tagger.cpp  text_io.cpp  text_serializable.cpp  xml.cpp
src/test/: color.cpp  geometry.cpp  test_main.cpp
test/: CMakeLists.txt  ReadMe.md  ork_test_local.bat  ork_test_local.sh
